--- a/app/partials/desktop/login.html
+++ b/app/partials/desktop/login.html
@@ -19,7 +19,7 @@
           <my-i18n msgid="modal_next"></my-i18n><i class="icon icon-next-submit"></i>
         </a>
       </div>
-      <a class="login_head_logo_link" href="https://telegram.org" target="_blank">
+      <a class="login_head_logo_link" href="https://kotatogram.github.io" target="_blank">
         <i class="icon icon-tg-logo"></i><i class="icon icon-tg-title"></i>
       </a>
     </div>
