--- a/app/partials/desktop/message_media.html
+++ b/app/partials/desktop/message_media.html
@@ -10,13 +10,13 @@
 
   <div ng-switch-when="messageMediaUnsupported">
     <div class="im_message_text" my-i18n="message_attach_unsupported">
-      <my-i18n-param name="link"><a href="https://web.telegram.org" target="_blank">web.telegram.org</a></my-i18n-param>
+      <my-i18n-param name="link"><a href="https://kotatogram.github.io/kotatogram-oldweb" target="_blank">kotatogram.github.io/kotatogram-oldweb</a></my-i18n-param>
     </div>
   </div>
 
   <div ng-switch-when="messageMediaUnsupportedWeb">
     <div class="im_message_text" my-i18n="message_attach_unsupported">
-      <my-i18n-param name="link"><a href="https://web.telegram.org" target="_blank">web.telegram.org</a></my-i18n-param>
+      <my-i18n-param name="link"><a href="https://kotatogram.github.io/kotatogram-oldweb" target="_blank">kotatogram.github.io/kotatogram-oldweb</a></my-i18n-param>
     </div>
   </div>
 </div>
