--- a/app/partials/mobile/login.html
+++ b/app/partials/mobile/login.html
@@ -22,7 +22,7 @@
             </a>
           </li>
           <li>
-            <a class="navbar-brand tg_logo_wrap" href="https://telegram.org" target="_blank"><i class="icon icon-tg-logo"></i><i class="icon icon-tg-title"></i></a>
+            <a class="navbar-brand tg_logo_wrap" href="https://kotatogram.github.io" target="_blank"><i class="icon icon-tg-logo"></i><i class="icon icon-tg-title"></i></a>
           </li>
         </ul>
       </div>
